--- a/app/views/index.html
+++ b/app/views/index.html
@@ -44,7 +44,7 @@
         <ul class="foot-nav">
             <li>
                 <div class="custom-tweet-button">
-                    <a href="https://twitter.com/intent/tweet?url=http://btcbrl.info/&amp;text=O último preço do Bitcoin na {{ title }} foi {{ brl.toFixed(2) }} BRL" target="_blank" alt ="Tweetar Cotação">
+                    <a href="https://twitter.com/intent/tweet?url=http://btcbrl.info/&amp;text=O último preço de {{ btc.toFixed(8) }} Bitcoin na {{ title }} foi {{ brl.toFixed(2) }} BRL" target="_blank" alt ="Tweetar Cotação">
                         <i class="btn-icon"></i>
                         <span class="btn-text">Tweetar</span>
                     </a>
