--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -536,6 +536,11 @@ a {
 .head-nav {
   list-style: none;
   margin: 0; }
+  @media only screen and (min-width: 1024px) {
+    .head-nav {
+      float: right; }
+      .head-nav > li {
+        display: inline-block; } }
 
 @media only screen and (min-width: 481px) {
   .head-box {
