--- a/assets/sass/_head.sass
+++ b/assets/sass/_head.sass
@@ -34,6 +34,10 @@
 .head-nav
   list-style: none
   margin: 0
+  +media-query(desk)
+    float: right
+    > li
+      display: inline-block
 
 .head-box
   +media-query(lap)
